<?xml version="1.0"?>
<package format="2">
  <name>isr_ros_utils</name>
  <version>0.0.0</version>
    <description>This package is built for using ROS1 interface with compactness and convenience</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
